# magister

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  dict.txt
src/: CacheOfSentences.cpp  CacheOfSentences.hpp  CompileTimeSentences_demo.cpp  CompileTimeSentences_demo.hpp  Lesson.cpp  Lesson.hpp  PoFileEntry.cpp  PoFileEntry.hpp  Sentence.cpp  Sentence.hpp  logger.cpp  logger.hpp  main.cpp
tests/: CMakeLists.txt
tests/dummy/: CMakeLists.txt  Sentence.cpp  Sentence.hpp  dummyTest.cpp
tests/readPoFile/: CMakeLists.txt  readPoFile.cpp
